--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
+@import "./styles/fonts.css";
+@import "./styles/components.css";
+@import './styles/dividers.css';
 .App {
+  font-family: 'Inter','Poppins', sans-serif;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  background-color: #FF4757;/*#171a23;*/
+  /*display: flex;
+  flex-direction: column;*/
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+
   color: white;
+  position: relative;
 }
 
-.App-link {
-  color: #61dafb;
+.landingTitle{
+  padding-top: 100px;
+  padding-bottom: 100px;
+  width: 100%;
+  color: #FF4757;
+  background: white;
+  position: relative;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.landingBody{
+  padding-top: 50px;
+  /*width: 100%;*/
+
+  font-size: 20px;
 }
