--- a/src/App.css
+++ b/src/App.css
@@ -17,9 +17,8 @@
 }
 
 .landingTitle{
-  padding-top: 100px;
+  padding-top: 80px;
   padding-bottom: 100px;
-  width: 100%;
   color: #FF4757;
   background: white;
   position: relative;
@@ -32,7 +31,11 @@
   font-size: 20px;
 }
 
+.container{
+  min-height: calc(100vh - 70px)
+}
 .footer{
-  padding-top: 50px;
+  padding-top: 25px;
+  line-height: 21px;
   padding-bottom: 25px;
 }
