--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -1,10 +1,16 @@
+.appTitle{
+    padding-bottom: 10px;
+    font-family: 'Poppins';
+}
 .search{
     padding-bottom: 50px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 .fire{
     padding-top: 50px;
     padding-bottom: 50px;
-    width: 250px;
+    height: 250px;
 }
 .accordian{
     font-size: 14px;
@@ -17,8 +23,11 @@ p{
 }
 
 .about{
-    max-width: 600px;
+    padding-top: 50px;
+    max-width: 550px;
     font-size: 18px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .articleCard{
@@ -26,11 +35,13 @@ p{
     background-color: white;
     color: #171a23;
     border-radius: 10px;
-    width: 600px;
-    text-align: left;
-    position: relative;
+    max-width: 600px;
+    margin-left: 25px;
+    margin-right: 25px;
     margin-top: 25px;
     margin-bottom: 25px;
+    text-align: left;
+    position: relative;
     transition: all .1s ease-in-out; 
     cursor: default;
 }
