--- a/src/styles/flex.css
+++ b/src/styles/flex.css
@@ -5,3 +5,14 @@
 .col{
     flex: 1;
 }
+
+.flexContainer{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+}
+
+.flexBox{
+    position: relative;
+    top: 0;
+}
