--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -25,17 +25,37 @@ p{
 .inputOuter{
     margin-left: 15px;
     margin-right: 15px;
+    display: flex;
+    justify-content: center;
 }
 .inputField{
     max-width: 500px;
-    font-size: 15px;
+    font-size: 16px;
+    line-height: 20px;
     padding: 10px 10px 10px 10px;
-    width:100%;
+    width: 100%;
     display:block;
     color: #171a23;
-    border-radius: 8px;
-    margin-bottom: 25px;
+    border-radius: 8px 0px 0px 8px;
     border: none;
+    margin-bottom: 40px;
+}
+
+.inputButton{
+    width: 40px;
+    height: 40px;
+    background-color: white;
+    border-radius: 0px 8px 8px 0px;
+    transition: 0.3s;
+}
+
+.inputButton:hover{
+    background-color: #ebeef2;
+
+}
+
+.inputIcon{
+    height: 20px;
 }
 
 .inputField:focus{
@@ -106,4 +126,14 @@ p{
 .loading{
     margin-top: 25px;
     width: 100px;
+}
+
+.link{
+    color: white;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.link:hover{
+    color: #ffccd0;
 }
