--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -6,3 +6,12 @@ h1{
 .aqiNearby p{
     font-size: 18px;
 }
+
+.mapSection h3{
+    margin-bottom: 20px
+}
+
+.mapSection h2{
+    font-family: 'Share Tech Mono', monospace;
+    margin-bottom: 10px
+}
