Polished Twitter Cards

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -102,9 +102,15 @@ p{
     position: relative;
     transition: all .1s ease-in-out; 
     cursor: default;
+
+    
 }
 .articleCard:hover{
     transform: scale(1.02);
+}
+
+a {
+    text-decoration: none !important;
 }
 .articleTitle{
     padding-bottom: 5px;
@@ -192,14 +198,28 @@ p{
 }
 .action{
     height: 25px;
-    color: green;
     margin-right: 20px;
 }
-
 .action:hover{
     opacity: .5;
-    transition: 0.2s;
+    transition: 0.1s;
+
 }
+
+/*.intents{
+    display:flex;
+}
+
+.intent {
+    height: 25px;
+    
+
+}
+.intent:hover{
+    opacity: .5;
+    transition: 0.2s;
+
+}*/
 
 .timestamp {
     position: absolute;
@@ -211,6 +231,7 @@ p{
 
 .avatar {
     height: 45px;
+    border-radius: 22px;
     margin-right: 15px;
 }
 
